Fix spacing problem.

--- a/source/stylesheets/components/split.styl
+++ b/source/stylesheets/components/split.styl
@@ -6,7 +6,11 @@ split
 
 .split {
     position: relative;
-    margin-bottom: ($grid-gutter-width * 2);
+
+    &,
+    &:last-child { // needs to counter last-child rules in .section
+        margin-bottom: ($grid-gutter-width * 2);
+    }
 
     clearfix()
 
@@ -113,6 +117,9 @@ split
 
 @media $media-query-tall {
     .split {
-        margin-bottom: $grid-gutter-width-wide;
+        &,
+        &:last-child { // needs to counter last-child rules in .section
+            margin-bottom: ($grid-gutter-width-wide * 2);
+        }
     }
 }
